--- a/daemonset/insightfinder.yaml
+++ b/daemonset/insightfinder.yaml
@@ -10,7 +10,7 @@ spec:
     spec:
       containers:
         - name: insightfinder
-          image: insightfinderagent/kubernetes-daemon-set:testing
+          image: insightfinderagent/kubernetes-daemon-set:master
           command: [ "bash", "-c", "/startup.sh" ]
           env:
             - name: INSIGHTFINDER_PROJECTKEY
